 * $Id: ChangeLog,v 1.4182 2005/06/17 17:03:39 lculik Exp $

/* Use this format for the entry headers:
   YYYY-MM-DD HH:MM UTC[-|+]hhmm Your Full Name <your_email@address>
   For example:
   2002-12-01 23:12 UTC+0100 Foo Bar <foo.bar@foobar.org>
*/
2005-06-17 21:30 UTC+0200 Henryk Olkowski <oh1@op.pl>
  * include/hbexprb.c
    ! Fixed compiler bug:
      Compile: harbour test.prg /w4/A/GC0/M/N/W/Q0/ES2
       procedure test()
        m->alfa[1]:=1  //  Warning W0001  Ambiguous reference: 'ALFA'
       return

2005-06-17 14:10 UTC-0300 Luiz Rafael Culik<culikr at uol.com.br>
  * contrib/htmllib/oframe.prg
    !minor fix
  * include/thread.h
    source/vm/thread.c
    source/vm/inet.c
    ! minor fix to allow compile in MT on HPUX

2005-06-17 11:30 UTC+1200 Peter Rees <peter(AT)rees.co.nz>
  * source/rtl/memoedit.prg
    + METHOD xDo() - added Self as 4th paramater to UserFunction

2005-06-16 16:10 UTC+0200 Lorenzo Fiorini <lorenzo_fiorini/at/teamwork.it>
  * xharbour/bin/bld.bat
    * for OpenWatcom and mingw32:
	   * added MT support
	   * added HB_MULTI_GT support
	   * added ct and tip
  * xharbour/config/w32/watcom.cf
    * added HB_THREAD_SUPPORT for OpenWatcom

2005-06-15 22:56 UTC-0800 Ron Pinkas <Ron in xHarbour.com>
  * source/vm/errorapi.c
    * Moved checks for s_errorHandler to precede check on hb_vm_iTry

2005-06-15 21:55 UTC-0300 Eduardo Fernandes <modalsist@yahoo.com.br>
  * utils/hbmake/hbmutils.prg
  * utils/hbmake/hbmake.prg
  ! Version 1.145 - Fixed to create obj directory if it does not exist
    before compile a makefile. Better "harbour.cfg" file management.

2005-06-14 11:30 UTC+0300 Phil Krylov <phil a t newstar.rinet.ru>
  * make_gnu.sh
    ! Fixed double slashes.
  * doc/howtobsd.sh
    + Added bash as a requirement.

2005-06-14 01:40 UTC+0300 Phil Krylov <phil a t newstar.rinet.ru>
  * source/rtl/filesys.c
    ! Fixed _POSIX_SYNCHRONIZED_IO check to meet the standard.
      It should probably fix FreeBSD 5.4-RELEASE compilation (untested).